Update to change the surefire settings to reduce the memory and remove legacy options for non-HA tests.